# nn

./: .gitmodules  CMakeLists.txt  activation.cc  activation.h  ad.cc  ad.h  error.cc  error.h  eval.h  expr.h  loss.cc  loss.h  main.cc  mnist.cc  mnist.h  nn.cc  nn.h  program.cc  program.h  shape.cc  shape.h  tensor.cc  tensor.h  tensor_test.cc  tensor_value.cc  tensor_value.h  train.h  types.h
